objects/Event_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Advisory_Event__c</fullName>
        <label>Advisory Event</label>
        <referenceTo>Advisory_Event__c</referenceTo>
        <relationshipLabel>Event Registrations</relationshipLabel>
        <relationshipName>Event_Registrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName + &quot; &quot; +  Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Registrations (Contact)</relationshipLabel>
        <relationshipName>Event_Registrations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copies_to_Assistant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copies to Assistant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Additional_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Copy Additional Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Registrations (Copy Additional Contact)</relationshipLabel>
        <relationshipName>Additional_Contact_Event_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Registered__c</fullName>
        <label>Date Registered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Status_Category__c</fullName>
        <formula>Advisory_Event__r.Status_Category__c</formula>
        <label>Event Status Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <formula>TEXT( Advisory_Event__r.Status__c )</formula>
        <label>Event Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Attendance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Group Attendance</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Institution__c</fullName>
        <formula>IF( NOT(ISBLANK( Contact__r.Account.Top_Parent_Institution__c )), Contact__r.Account.Top_Parent_Institution__r.Name,  Contact__r.Account.Name)</formula>
        <label>Group Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Industry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institution_Name__c</fullName>
        <formula>Institution__r.Name</formula>
        <label>Institution Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Registration_Id__c</fullName>
        <description>CR-1714</description>
        <label>Legacy Registration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Make Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_Status_Text__c</fullName>
        <description>Created as part of the Events Management Project. This field is populated via Workflow.</description>
        <label>Membership Status Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Status__c</fullName>
        <formula>IF( ISPICKVAL( Contact__r.Record_Type__c , &quot;Employee&quot;), 
    &quot;Employee&quot;, 
    IF( Program_Count_Member__c &gt; 0, 
        &quot;Member&quot;, 
        &quot;Prospect&quot;
    )
)</formula>
        <label>Membership Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Count_Member__c</fullName>
        <label>Program Count - Member</label>
        <summaryFilterItems>
            <field>Registration_Membership__c.Status__c</field>
            <operation>equals</operation>
            <value>Member</value>
        </summaryFilterItems>
        <summaryForeignKey>Registration_Membership__c.Event_Registration__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Qualified_by_Title__c</fullName>
        <formula>IF(  CONTAINS( Advisory_Event__r.Title_String__c ,   TEXT( Contact__r.Management_Level__c ) ) , &quot;Yes&quot;, &quot;No&quot; )</formula>
        <label>Qualified by Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waitlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Event Registration</label>
    <nameField>
        <label>Event Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Contact__c )</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>You must identify a Contact for this registration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rejection_Reason</fullName>
        <active>true</active>
        <description>Rejection Reason must be specified when Status is Rejected.</description>
        <errorConditionFormula>AND(
    ISCHANGED( Status__c ),
    ISPICKVAL( Status__c , &quot;Rejected&quot;),
    ISBLANK( Rejection_Reason__c )
)</errorConditionFormula>
        <errorDisplayField>Rejection_Reason__c</errorDisplayField>
        <errorMessage>You must indicate why the registration request was rejected.</errorMessage>
    </validationRules>
</CustomObject>